--- a/styles/globals.css
+++ b/styles/globals.css
@@ -525,12 +525,12 @@ video {
   visibility: hidden;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .\!fixed {
   position: fixed !important;
+}
+
+.fixed {
+  position: fixed;
 }
 
 .absolute {
@@ -541,20 +541,24 @@ video {
   position: relative;
 }
 
-.sticky {
-  position: sticky;
-}
-
-.\!sticky {
-  position: sticky !important;
+.\!top-0 {
+  top: 0px !important;
 }
 
 .-left-3 {
   left: -0.75rem;
 }
 
+.-top-\[100\%\] {
+  top: -100%;
+}
+
 .left-0 {
   left: 0px;
+}
+
+.right-8 {
+  right: 2rem;
 }
 
 .top-0 {
@@ -563,58 +567,6 @@ video {
 
 .top-3 {
   top: 0.75rem;
-}
-
-.-top-40 {
-  top: -10rem;
-}
-
-.-top-\[200px\] {
-  top: -200px;
-}
-
-.-top-\[100\%\] {
-  top: -100%;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-3 {
-  right: 0.75rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.right-0\.5 {
-  right: 0.125rem;
-}
-
-.\!top-0 {
-  top: 0px !important;
-}
-
-.right-7 {
-  right: 1.75rem;
-}
-
-.right-8 {
-  right: 2rem;
 }
 
 .z-20 {
@@ -655,6 +607,14 @@ video {
   margin-bottom: 1.75rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-\[112px\] {
+  margin-bottom: 112px;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -669,22 +629,6 @@ video {
 
 .mt-7 {
   margin-top: 1.75rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.\!mb-8 {
-  margin-bottom: 2rem !important;
-}
-
-.mb-\[112px\] {
-  margin-bottom: 112px;
 }
 
 .block {
@@ -796,31 +740,6 @@ video {
 
 .translate-y-2\.5 {
   --tw-translate-y: 0.625rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-10 {
-  --tw-translate-y: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[100\%\] {
-  --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[200\%\] {
-  --tw-translate-y: 200%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[300\%\] {
-  --tw-translate-y: 300%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[250\%\] {
-  --tw-translate-y: 250%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -938,10 +857,6 @@ video {
   row-gap: 0.5rem;
 }
 
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
 .gap-y-5 {
   row-gap: 1.25rem;
 }
@@ -950,16 +865,12 @@ video {
   row-gap: 1.5rem;
 }
 
-.gap-y-\[100px\] {
-  row-gap: 100px;
-}
-
 .gap-y-8 {
   row-gap: 2rem;
 }
 
-.gap-y-10 {
-  row-gap: 2.5rem;
+.gap-y-\[100px\] {
+  row-gap: 100px;
 }
 
 .overflow-hidden {
@@ -1043,16 +954,8 @@ video {
   padding-bottom: 2px;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
 .pt-12 {
   padding-top: 3rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
 }
 
 .pt-5 {
@@ -1153,10 +1056,6 @@ video {
   opacity: 0;
 }
 
-.opacity-100 {
-  opacity: 1;
-}
-
 .grayscale {
   --tw-grayscale: grayscale(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1180,10 +1079,6 @@ video {
   transition-duration: 150ms;
 }
 
-.delay-100 {
-  transition-delay: 100ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1194,10 +1089,6 @@ video {
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 @font-face {
@@ -1435,41 +1326,6 @@ body {
   background-color: rgb(236 236 236 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-light-primary-1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(18 184 134 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-light-container-3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(233 236 239 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-dark-container-1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 30 30 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-dark-primary-2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 230 190 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-dark-primary-1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(150 242 215 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-dark-bg-1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(18 18 18 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:text-dark-primary-1 {
   --tw-text-opacity: 1;
   color: rgb(150 242 215 / var(--tw-text-opacity));
@@ -1539,6 +1395,10 @@ body {
     margin-bottom: 200px;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:mt-14 {
     margin-top: 3.5rem;
   }
@@ -1557,10 +1417,6 @@ body {
 
   .md\:h-\[100px\] {
     height: 100px;
-  }
-
-  .md\:\!h-full {
-    height: 100% !important;
   }
 
   .md\:w-6 {
@@ -1609,10 +1465,6 @@ body {
     row-gap: 150px;
   }
 
-  .md\:\!p-0 {
-    padding: 0px !important;
-  }
-
   .md\:text-center {
     text-align: center;
   }
@@ -1633,10 +1485,6 @@ body {
 
   .md\:text-inherit {
     color: inherit;
-  }
-
-  .md\:opacity-100 {
-    opacity: 1;
   }
 }
 
