--- a/styles/globals.css
+++ b/styles/globals.css
@@ -513,6 +513,18 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 .\!visible {
   visibility: visible !important;
 }
@@ -604,19 +616,14 @@ video {
   margin-bottom: 3rem;
 }
 
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .my-5 {
@@ -644,9 +651,9 @@ video {
   margin-bottom: 25px;
 }
 
-.my-16 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-10 {
@@ -683,6 +690,14 @@ video {
 
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
 }
 
 .block {
@@ -737,6 +752,14 @@ video {
   height: 100%;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-2\.5 {
+  height: 0.625rem;
+}
+
 .w-0 {
   width: 0px;
 }
@@ -775,6 +798,42 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-\[1000px\] {
+  width: 1000px;
+}
+
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+
+.max-w-\[330px\] {
+  max-width: 330px;
+}
+
+.max-w-\[360px\] {
+  max-width: 360px;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
+.max-w-\[80\%\] {
+  max-width: 80%;
+}
+
+.max-w-\[75\%\] {
+  max-width: 75%;
 }
 
 .basis-full {
@@ -826,6 +885,16 @@ video {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .cursor-default {
@@ -994,6 +1063,11 @@ video {
   background-color: rgb(33 37 41 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .stroke-\[2\.5\] {
   stroke-width: 2.5;
 }
@@ -1046,8 +1120,8 @@ video {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-.\!text-\[20px\] {
-  font-size: 20px !important;
+.\!text-\[18px\] {
+  font-size: 18px !important;
 }
 
 .text-2xl {
@@ -1103,10 +1177,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.\!text-\[18px\] {
-  font-size: 18px !important;
 }
 
 .font-bold {
@@ -1430,6 +1500,11 @@ body {
   background-color: rgb(236 236 236 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-dark-primary-1 {
   --tw-text-opacity: 1;
   color: rgb(150 242 215 / var(--tw-text-opacity));
@@ -1494,19 +1569,14 @@ body {
     grid-column: span 3 / span 3;
   }
 
-  .md\:my-\[128px\] {
-    margin-top: 128px;
-    margin-bottom: 128px;
+  .md\:my-\[160px\] {
+    margin-top: 160px;
+    margin-bottom: 160px;
   }
 
   .md\:my-\[200px\] {
     margin-top: 200px;
     margin-bottom: 200px;
-  }
-
-  .md\:my-\[160px\] {
-    margin-top: 160px;
-    margin-bottom: 160px;
   }
 
   .md\:mb-0 {
@@ -1583,26 +1653,6 @@ body {
     text-align: center;
   }
 
-  .md\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1611,6 +1661,26 @@ body {
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:text-lg {
@@ -1650,10 +1720,6 @@ body {
 
   .xl\:w-\[920px\] {
     width: 920px;
-  }
-
-  .xl\:w-\[750px\] {
-    width: 750px;
   }
 
   .xl\:columns-6 {
